<resources>

    <string name="app_name">AALTool</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lcm_calibration">AAL LCM Calibration</string>
    <string name="title_activity_als_calibration">AAL ALS Calibration</string>
    <string name="title_activity_tuning">AAL Tuning</string>
    <string name="power">PowerSaving</string>
    <string name="luminance">Luminance</string>
    <string name="lux">Lux</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="LABC">Brightness</string>
    <string name="CABC">Smart Backlight</string>
    <string name="DRE">Readability</string>

</resources>
